# debugger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json  demo_test_1.cc  main.cpp  xmake.lua
.cache/clangd/index/: base.h.097C1692530E9FDF.idx  break_point.h.B72F68A2918BC843.idx  core.h.C02C7BB874CD8FD6.idx  debugger.cc.9FDB8D27A047B9CA.idx  debugger.h.E177F4FA3AD598BE.idx  format-inl.h.C585A337A8575FD9.idx  format.cc.A4D03595605E15FE.idx  format.h.226DA995FF5BDFC0.idx  linenoise.c.AE4445498F40ABF0.idx  linenoise.h.F161379FE066C295.idx  log.h.18CDD40E0B2DF402.idx  main.cpp.4D07C4F4C03D5157.idx  os.cc.44E0E562ABF12849.idx  os.h.543A47CADBE77284.idx  register.h.58E07A172A0196DE.idx
doc/: Windows.md  diff.md
src/debugger/: break_point.cc  debugger.cc  ptrace_expr_context.cc
src/include/common/: log.h
src/include/debugger/: break_point.h  debugger.h  ptrace_expr_context.h  register.h
src/linux/debugger/: debugger.cc
src/linux/include/debugger/: break_point.h  debugger.h  ptrace_expr_context.h  register.h
src/windows/debugger/: windows_debugger.cc
src/windows/include/debugger/: windows_debugger.h
